--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -37,6 +37,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Set up Node.js 16.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
 
       - name: Set up Python version
         uses: actions/setup-python@v3.0.0
